--- a/src/styles/my/MyOrderDetail.css
+++ b/src/styles/my/MyOrderDetail.css
@@ -8,9 +8,28 @@
     padding: 15px;
     text-align: center;
   }
+  .button-container {
+    position: absolute;
+    top: 25px;
+    right: 20px;
+    text-align: right;
   
+  }
+  
+  /* 버튼 스타일 */
+  .button-container button {
+    background-color: white;
+    color: rgb(15, 14, 14);
+    padding: 10px 20px; /* 버튼 크기 조정 */
+    border: none;
+    border-radius: 8px; /* 더 둥근 모서리 */
+    cursor: pointer;
+    font-size: 20px; /* 버튼 글꼴 크기 조정 */
+  }
+  
+
   .footer {
-    background-color: #333;
+    background-color: #161515;
     color: white;
     text-align: center;
     padding: 10px;
@@ -22,6 +41,7 @@
     padding: 20px;
     border: 1px solid #ccc;
     border-radius: 5px;
+    position: relative;
   }
   
   .order-section {
