--- a/src/styles/my/MyOrderDetail.css
+++ b/src/styles/my/MyOrderDetail.css
@@ -1,91 +1,93 @@
 .app {
-    margin: 0 auto;
-    width: 800px; 
-  }
-  .header {
-    background-color: #959e12;
-    color: white;
-    padding: 15px;
-    text-align: center;
-  }
-  .button-container {
-    position: absolute;
-    top: 25px;
-    right: 20px;
-    text-align: right;
-  
-  }
-  
-  /* 버튼 스타일 */
-  .button-container button {
-    background-color: white;
-    color: rgb(15, 14, 14);
-    padding: 10px 20px; /* 버튼 크기 조정 */
-    border: none;
-    border-radius: 8px; /* 더 둥근 모서리 */
-    cursor: pointer;
-    font-size: 20px; /* 버튼 글꼴 크기 조정 */
-  }
-  
+  z-index: 1000;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background: #fff;
+  margin: 0 auto;
+  width: 400px;
+}
+/* .header {
+  background-color: #959e12;
+  color: white;
+  padding: 15px;
+  text-align: center;
+} */
+.button-container {
+  position: absolute;
+  top: 5px;
+  right: 0px;
+  text-align: right;
+}
 
-  .footer {
-    background-color: #161515;
-    color: white;
-    text-align: center;
-    padding: 10px;
-  }
-  
-  .order-detail-page {
-    max-width: 800px;
-    margin: 20px auto;
-    padding: 20px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    position: relative;
-  }
-  
-  .order-section {
-    margin-bottom: 40px; 
-  }
-  
-  .order-section h2 {
-    border-bottom: 2px solid #333;
-    padding-bottom: 10px;
-    font-size: 20px; 
-    font-weight: bold;
-    margin-bottom: 20px;
-  }
-  
-  .order-info p,
-  .order-options p,
-  .payment-info p,
-  .payment-method p {
-    margin: 10px 0; 
-    font-size: 15px; 
-    line-height: 1.6; 
-  }
-  
-  .order-info .branch-name {
-    font-weight: bold;
-  }
-  
-  .order-status {
-    color: #007bff;
-  }
-  
-  
-  .button {
-    background-color: #007bff;
-    color: white;
-    border: none;
-    padding: 10px 20px;
-    border-radius: 5px;
-    cursor: pointer;
-    font-size: 16px;
-    transition: background-color 0.3s;
-  }
-  
-  .button:hover {
-    background-color: #0056b3;
-  }
+/* 버튼 스타일 */
+.button-container button {
+  background-color: white;
+  color: rgb(15, 14, 14);
+  padding: 10px 20px; /* 버튼 크기 조정 */
+  border: none;
+  border-radius: 8px; /* 더 둥근 모서리 */
+  cursor: pointer;
+  font-size: 20px; /* 버튼 글꼴 크기 조정 */
+}
 
+/* .footer {
+  background-color: #161515;
+  color: white;
+  text-align: center;
+  padding: 10px;
+} */
+
+.order-detail-page {
+  max-width: 800px;
+  margin: 0px auto;
+  padding: 20px 20px 10px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  position: relative;
+}
+
+.order-section {
+  margin-bottom: 25px;
+}
+
+.order-section h2 {
+  border-bottom: 2px solid #333;
+  padding-bottom: 10px;
+  font-size: 20px;
+  font-weight: bold;
+  /* margin-bottom: 20px; */
+}
+
+.order-info p,
+.order-options p,
+.payment-info p,
+.payment-method p {
+  margin: 10px 0;
+  font-size: 15px;
+  line-height: 1.6;
+}
+
+.order-info .branch-name {
+  font-weight: bold;
+}
+
+.order-status {
+  color: #007bff;
+}
+
+.button {
+  background-color: #007bff;
+  color: white;
+  border: none;
+  padding: 10px 20px;
+  border-radius: 5px;
+  cursor: pointer;
+  font-size: 16px;
+  transition: background-color 0.3s;
+}
+
+.button:hover {
+  background-color: #0056b3;
+}
