--- a/src/styles/shop/ShopModal.css
+++ b/src/styles/shop/ShopModal.css
@@ -6,6 +6,7 @@
     transform: translate(-50%, -50%);
     z-index: 1000;
     width: 600px;
+    height: 600px;
     padding: 10px 20px 20px;
     flex-direction: column;
     justify-content: center;
@@ -14,11 +15,26 @@
     background-color: #fff;
 }
 
+.modal_cancle {
+    width: 550px;
+    justify-content: flex-end;
+    display: flex;
+}
+
+.store_modal_cancle {
+    margin-bottom: 5px;
+
+    img {
+        width: 20px;
+        cursor: pointer;
+    }
+}
+
 .scroll_y {
-    padding: 1rem;
-    overflow: hidden;
-    height: 150px;
+    width: 550px;
+    height: 100px;
     overflow-y: auto;
+    border: 1px solid #ab9480;
 }
 
 .store_list_main {
@@ -26,11 +42,16 @@
     margin: 0 auto;
 }
 
+h1 {
+    text-align: right;
+}
+
 .store_list {
     display: flex;
     justify-content: space-between;
     align-items: center;
     width: 500px;
+    height: 95px;
     border: 1px solid #d9d9d9;
     padding: 15px 20px;
     margin-bottom: 20px;
@@ -71,21 +92,21 @@
     }
 }
 
-
-#map {
-    width: 500px;
-    height: 300px;
-    margin-bottom: 6rem;
-}
-
 .my_location {
-    width: 500px;
+    width: 550px;
     display: flex;
     justify-content: flex-end;
-    margin: 1rem 0;
+    margin: 0.5px 0;
+    padding-top: 8px;
 }
 
-.btn_location {
+#map {
+    width: 550px;
+    height: 195px;
+    border: 1px solid #ab9480;
+}
+
+.btn_my_location {
     width: 110px;
     height: 27px;
     border-radius: 10px;
@@ -93,7 +114,18 @@
     color: #fff;
     border: #fff;
     cursor: pointer;
-    font-size: 15px;
+    font-size: 18px;
+}
+
+.btn_choice {
+    width: 300px;
+    height: 27px;
+    border-radius: 10px;
+    background: #ff8b38;
+    color: #fff;
+    border: #fff;
+    cursor: pointer;
+    font-size: 20px;
     margin: 0 0.5rem;
 }
 
