--- a/src/styles/shop/ShopPage.css
+++ b/src/styles/shop/ShopPage.css
@@ -1,10 +1,20 @@
-.MainWrap {
+.ShopContainer{
+    display: flex;
+    background-color: '#fff';
+    align-items: 'center';
+    justify-content: 'center';
+    border: 1rem solid;
+    width: 1000px;
+    height: 500px;
+}
+
+.ShopWrap {
     width: 100vw;
     height: auto;
     /* margin: 0 auto; */
 }
 
-.MainWrapInner {
+.ShopWrapInner {
     width: 1300px;
     margin: 0 auto;
 }
