--- a/src/styles/menu/MenuDetail.css
+++ b/src/styles/menu/MenuDetail.css
@@ -1,9 +1,8 @@
 .menu-container {
   display: flex;
   align-items: center;
-  padding: 20px;
+  padding: 1rem;
   background: transparent;
-  border-radius: 8px;
 }
 
 .MenuButtonWrap {
@@ -57,7 +56,7 @@
 
 .menu-image {
   flex: 0 0 auto;
-  margin-right: 40px;
+  margin-right: 1rem;
 }
 
 .menu-image img {
@@ -142,58 +141,12 @@
 .infoContainer {
   margin-top: 20px;
   display: block;
-}
-
-.infoNutrition h3 {
-  display: inline-block;
-  font-family: "Noto Sans";
-  font-style: normal;
-  font-weight: 600;
-  font-size: 25px;
-  line-height: 25px;
-
-  white-space: nowrap;
-
-  color: #572a01;
-}
-
-.infoNutrition table {
-  box-sizing: border-box;
-  border-collapse: collapse;
-  margin-bottom: 20px;
-
-  width: 553px;
-  height: 586px;
-
-  background: #ffffff;
-  border: 1px solid rgba(87, 42, 1, 0.48);
-
-  border-radius: 30px;
-}
-
-.infoNutrition th,
-.infoNutrition td {
-  padding: 8px;
-  text-align: left;
-  border-bottom: 1px solid #ddd;
-
-  font-family: "Noto Sans";
-  font-style: normal;
-  font-weight: 600;
-  font-size: 20px;
-  line-height: 34px;
-
-  color: #572a01;
-}
-
-.infoNutrition th {
-  font-weight: bold;
+  margin-left: 10%;
+  text-align: center;
+  
 }
 
 .origin-info {
-  /* margin-left: 210px;
-  margin-bottom: 30px;
-  margin-right: 10px; */
 
   margin-left: 150px;
 
@@ -240,6 +193,7 @@
 }
 
 .nutrition-table {
+  margin-top: 50px;
   width: 100%;
   display: flex;
   flex-direction: column;
