--- a/src/styles/menu/MenuDetail.css
+++ b/src/styles/menu/MenuDetail.css
@@ -3,46 +3,7 @@
   align-items: center;
   padding: 1rem;
   background: transparent;
-}
-
-.MenuButtonWrap {
-  margin: 0 auto;
-  display: flex;
-  justify-content: space-between;
-  padding-top: 40px;
-  font-size: 23px;
-  width: 665px;
-}
-
-.MenuButtonWrap button {
-  width: 100px;
-  height: 47px;
-  border: 1px solid #572a01;
-  border-radius: 30px;
-  background-color: #fff;
-  color: #572a01;
-  text-align: center;
-}
-
-.MenuButtonWrap button:hover {
-  background-color: #ffd15a;
-  border: 1px solid #ffd15a;
-  color: #fff;
-  cursor: pointer;
-}
-
-.MenuTitle {
-  display: flex;
-  justify-content: space-between;
-  width: 360px;
-  margin: 0 auto;
-  margin-top: 100px;
-}
-
-.MenuTitle p {
-  font-size: 25px;
-  font-weight: 700;
-  margin-top: 37px;
+  margin-top: 5%;
 }
 
 .Info-container {
@@ -56,6 +17,8 @@
 .menu-image {
   flex: 0 0 auto;
   margin-right: 1rem;
+  width: 800px;
+  height: 500px;
 }
 
 .menu-image img {
